# DMXP-MPMC

./: Cargo.toml  README.md  dhat-heap.json  test_py_debug.py
docs/: ARCHITECTURE.md  BUILDING_CONSUMERS.md  MEMORY_LAYOUT.md  README.md
examples/: blocking_consumer.rs  c_batch_benchmark.c  consumer.rs  ffi_demo.py  producer.rs  py_producer.py  python_producer_example.py
examples/go_demo/: main.go
src/: ffi.rs  lib.rs
src/Core/: SharedMemory.rs  futex.rs  mod.rs
src/Core/alloc/: debug.rs  getters.rs  mod.rs
src/Debug/: StructDebug.rs
src/MPMC/: builder.rs  consumer.rs  mod.rs  producer.rs
src/MPMC/Buffer/: Buffer.rs  Buffer_impl.rs  layout.rs
src/MPMC/Structs/: Buffer_Structs.rs
src/debug/: mod.rs
tests/: allocation_test.rs  allocation_tracking.rs  allocator_multithreads_test.rs  allocator_test.rs  layout.rs  mpmc.rs  mpmc_integration_test.rs  ringbuffer.rs  shared_memory.rs
tests/docs/: ALLOCATION_TRACKING.md
tests_py/: blocking_consumer.py  consumer.py  ctypes_validate.py  debug_shm.py  producer.py
