[package]
name = "DMXP-KVCache"
version = "0.1.0"
edition = "2021"
description = "A high-performance, persistent, in-memory key-value cache with an ordered keyspace."
license = "MIT OR Apache-2.0" # Choose a license you prefer
repository = "https://github.com/your-username/DMXP-KVCache" # Replace with your repo URL

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"

[dev-dependencies]
memoffset = "0.9"

[lib]
name = "dmxp_kvcache"
path = "src/lib.rs"
