[package]
name = "DMXP-KVCache"
version = "0.1.0"
edition = "2021"
description = "A high-performance, persistent, in-memory key-value cache with an ordered keyspace."
license = "MIT OR Apache-2.0" # Choose a license you prefer
repository = "https://github.com/your-username/DMXP-KVCache" # Replace with your repo URL

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"
lazy_static = "1.5.0"
libc = "0.2"
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }

[dev-dependencies]
memoffset = "0.9"
serial_test = "3.0"
dhat = "0.3"
memory-stats = "1.0"
fastrand = "2.3.0"

[lib]
name = "dmxp_kvcache"
path = "src/lib.rs"
